--- a/Module-32 API/index.html
+++ b/Module-32 API/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Helloo API</h2>
-
-    <script src="app.js"></script>
+    <button onclick="loadData()">Load Data</button>
+    <script src="api.js"></script>
 </body>
 </html>
