--- a/Module-32 API/index.html
+++ b/Module-32 API/index.html
@@ -5,10 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API</title>
+    <style>
+        *{
+            margin-top: 2%;
+            text-align: center;
+        }
+        button{
+            color: white;
+            font-weight: 700;
+            font-size: medium;
+            padding: 3% 5%;
+            background-color: rgba(11, 69, 122, 0.781);
+            border-radius: 5px;
+            margin-left: 5%;
+        }
+        ul{
+            list-style-type: none;
+        }
+        .li{
+            font-family: monospace;
+            font-size: 14px;
+            font-weight: bold;
+            margin-top: 3%;
+        }
+    </style>
 </head>
 <body>
     <h2>Helloo API</h2>
+   
+        
+    
     <button onclick="loadData()">Load Data</button>
+    <button onclick="loadUsers()">Load User</button>
+    <button onclick="loadPosts()">Load Posts</button>
+    <ul id="users" style="list-style-position: inside;"></ul>
     <script src="api.js"></script>
 </body>
 </html>
