--- a/Module-32 API/index.html
+++ b/Module-32 API/index.html
@@ -39,6 +39,7 @@
     <button onclick="loadUsers()">Load User</button>
     <button onclick="loadPosts()">Load Posts</button>
     <ul id="users" style="list-style-position: inside;"></ul>
-    <script src="api.js"></script>
+    <!-- <script src="api.js"></script> -->
+    <script src="api-prac.js"></script>
 </body>
 </html>
