--- a/Module-32 API/post.html
+++ b/Module-32 API/post.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API</title>
+    <title>Post</title>
     <style>
         *{
             margin-top: 2%;
-            text-align: center;
+            margin-left: 1%;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         button{
             color: white;
@@ -17,32 +18,35 @@
             padding: 3% 5%;
             background-color: rgba(11, 69, 122, 0.781);
             border-radius: 5px;
-            margin-left: 5%;
+            /* margin-left: 5%; */
         }
         ul{
             list-style-type: none;
         }
-        .li{
+        .post{
+            text-align: justify;
             font-family: monospace;
             font-size: 14px;
             font-weight: bold;
-            margin-top: 3%;
-        }
-        .users{
-            list-style-position: inside;
+            margin: 5%;
+            border: 2px solid black;
+            border-radius: 5px;
+            background-color: rgb(223, 223, 223);
         }
     </style>
 </head>
 <body>
-    <h2>API</h2>
+    <h2>POST</h2>
    
         
     
-    <button onclick="loadImage()">Load Image</button>
-    <button onclick="loadUsers()">Load User</button>
+    <!-- <button onclick="loadImage()">Load Image</button>
+    <button onclick="loadUsers()">Load User</button> -->
     <button onclick="loadPosts()">Load Posts</button>
-    <ul id="users"></ul>
+   <section id="posts"> 
+
+   </section>
     <!-- <script src="api.js"></script> -->
-    <script src="api-prac.js"></script>
+    <script src="post.js"></script>
 </body>
 </html>
