--- a/Module-32 API/album.html
+++ b/Module-32 API/album.html
@@ -4,45 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API</title>
+    <title>Album</title>
     <style>
         *{
             margin-top: 2%;
+            margin-left: 1%;
+            font-family: monospace;
+        }
+        .center{
             text-align: center;
         }
         button{
             color: white;
             font-weight: 700;
-            font-size: medium;
+            font-size: large;
             padding: 3% 5%;
             background-color: rgba(11, 69, 122, 0.781);
             border-radius: 5px;
-            margin-left: 5%;
+            /* margin-left: 5%; */
         }
         ul{
             list-style-type: none;
         }
-        .li{
+        .album{
+            text-align: justify;
             font-family: monospace;
             font-size: 14px;
             font-weight: bold;
-            margin-top: 3%;
-        }
-        .users{
-            list-style-position: inside;
+            margin: 5%;
+            border: 2px solid black;
+            border-radius: 5px;
+            background-color: rgb(223, 223, 223);
         }
     </style>
 </head>
 <body>
-    <h2>API</h2>
+    <h2 class="center">ALBUM</h2>
+   <div class="center"> <button onclick="album()">ALBUM</button></div>
+   <section id="AlbumContainer"> 
+
+   </section>
    
-        
-    
-    <button onclick="loadImage()">Load Image</button>
-    <button onclick="loadUsers()">Load User</button>
-    <button onclick="loadPosts()">Load Posts</button>
-    <ul id="users"></ul>
-    <!-- <script src="api.js"></script> -->
-    <script src="api-prac.js"></script>
+    <script src="album.js"></script>
 </body>
 </html>
