FOOD search :pizza: :meat_on_bone:

--- a/Module-33 API Example/KHAI-KHAI/index.html
+++ b/Module-33 API Example/KHAI-KHAI/index.html
@@ -15,12 +15,16 @@
         *{
         text-align:center;
     }
+    .logo{
+        height: 10%;
+        width: 10%;
+    }
    </style>
 </head>
 
 <body>
     <header>
-        <img class="w-25" src="food.ico" alt="">
+        <img class="logo my-1" src="https://media.giphy.com/media/3ohzdNwjApMs98ECKA/giphy.gif" alt="">
         <h2 class="text-center my-4 text-primary">
             KHAI KHAI
         </h2>
