--- a/Module-33 API Example/countries.html
+++ b/Module-33 API Example/countries.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country</title>
+    <link rel="shortcut icon" href="country.ico" type="image/x-icon">
     <style>
         * {
             text-align: center;
@@ -35,7 +36,9 @@
         }
 
         button:hover {
-            background: green;
+            border: 2px solid black;
+            background: white;
+            color: black;
         }
 
         .country {
