--- a/Module-41/index.html
+++ b/Module-41/index.html
@@ -7,6 +7,8 @@
     <title>TypeScript</title>
 </head>
 <body>
-    
+    <h1>Explore TS</h1>
+    <!-- js -->
+    <script src="js/first.js"></script>
 </body>
 </html>
