--- a/Module-42/storage.html
+++ b/Module-42/storage.html
@@ -7,7 +7,15 @@
     <title>Storage</title>
 </head>
 <body>
-    
+    <h1>Local & sessional storage</h1>
+    <input type="text" placeholder="storage id" id="storage-id">
+    <br>
+    <br>
+    <input type="text" placeholder="storage value" id="storage-value">
+    <br>
+    <br>
+    <button onclick="addToLocalStorage()">LocalStorage</button>
+    <button onclick="fromLocalStorage()">F-LocalStorage</button>
     <!-- js -->
     <script src="storage.js"></script>
 </body>
