--- a/Module-43/index.html
+++ b/Module-43/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <img id="slider-img" src="images/1.jpg" alt="">
+    <p>End of Milestone 7</p>
     <script src="slider.js"></script>
 </body>
 </html>
